Fixed text sizes on small screens

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -226,6 +226,12 @@ body {
     margin-top: 20px;
     height: auto;
     align-items: center;
+
+    .hero-texts {
+      .sosc-header {
+        font-size: 1.5em;
+      }
+    }
   }
 }
 
@@ -265,6 +271,11 @@ body {
     margin-top: 20px;
     height: auto;
     align-items: center;
+    .hero-texts {
+      .sosc-header {
+        font-size: 1.5em;
+      }
+    }
   }
 
 }
